XO_Project_UAT/Project--XOGrp--UAT/src/objects/CRMfusionDBR101__Convert_Display_Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A list of fields to be displayed in the conversion tool for each object (Lead, Account and Contact).</description>
    <fields>
        <fullName>CRMfusionDBR101__Field__c</fullName>
        <description>Field API name.</description>
        <label>Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Object__c</fullName>
        <description>Lead, account or contact</description>
        <label>Object</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DupeBlocker Convert Display Fields</label>
    <listViews>
        <fullName>CRMfusionDBR101__All_Convert_Display_Fields</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Object__c</columns>
        <columns>CRMfusionDBR101__Index__c</columns>
        <columns>CRMfusionDBR101__Field__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>